--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Blog
 email: tony@sharedcare.io
 description: >- # this means to ignore newlines until "baseurl:"
   Sharedcare.io
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://sharedcare.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Tonyforpeace
 github_username:  sharedcare
 
