--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Blog
 email: tony@sharedcare.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Sharedcare.io
+  Tchen.net
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://blog.sharedcare.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.tchen.net" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Tonyforpeace
 github_username:  sharedcare
 
